<resources>
    <string name="app_name">Piano Virtual</string>
    <string name="DÓ">DÓ</string>
    <string name="RÉ">RÉ</string>
    <string name="MI">MI</string>
    <string name="FÁ">FÁ</string>
    <string name="SOL">SOL</string>
    <string name="LÁ">LÁ</string>
    <string name="SI">SI</string>
    <string name="DÓM">DÓ ↑</string>
    <string name="RéM">Ré ↑</string>
    <string name="DÓSHARP">DÓ#</string>
    <string name="RÉSHARP">RÉ#</string>
    <string name="fásharp">FÁ#</string>
    <string name="SOLSHARP">SOL#</string>
    <string name="LÁSHARP">LÁ#</string>
    <string name="DÓMSHARP">DÓ# ↑</string>
    <string name="RémSHARP">Ré# ↑</string>
    <string name="MIM">Mi ↑</string>
    <string name="jogar">Jogar</string>
    <string name="Sair"> Sair</string>


</resources>